@@ -16,48 +16,48 @@
 <p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">functional/input/dangerous.txt</tt>, line 3)</p>
 <p>&quot;include&quot; directive disabled.</p>
 <pre class="literal-block">
-.. include:: /etc/passwd
+<span>.. include:: /etc/passwd</span>
 </pre>
 </div>
 <div class="system-message">
 <p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">functional/input/dangerous.txt</tt>, line 4)</p>
 <p>&quot;raw&quot; directive disabled.</p>
 <pre class="literal-block">
-.. raw:: html
-   :file: /etc/passwd
+<span>.. raw:: html
+   :file: /etc/passwd</span>
 </pre>
 </div>
 <div class="system-message">
 <p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">functional/input/dangerous.txt</tt>, line 6)</p>
 <p>&quot;raw&quot; directive disabled.</p>
 <pre class="literal-block">
-.. raw:: html
-   :url: file:///etc/passwd
+<span>.. raw:: html
+   :url: file:///etc/passwd</span>
 </pre>
 </div>
 <div class="system-message">
 <p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">functional/input/dangerous.txt</tt>, line 8)</p>
 <p>&quot;raw&quot; directive disabled.</p>
 <pre class="literal-block">
-.. raw:: html
+<span>.. raw:: html
 
    &lt;script&gt;
        that does something really nasty
-   &lt;/script&gt;
+   &lt;/script&gt;</span>
 </pre>
 </div>
 <div class="system-message">
 <p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">functional/input/dangerous.txt</tt>, line 13)</p>
 <p>File and URL access deactivated; ignoring &quot;csv-table&quot; directive.</p>
 <pre class="literal-block">
-.. csv-table:: :file: /etc/passwd
+<span>.. csv-table:: :file: /etc/passwd</span>
 </pre>
 </div>
 <div class="system-message">
 <p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">functional/input/dangerous.txt</tt>, line 14)</p>
 <p>File and URL access deactivated; ignoring &quot;csv-table&quot; directive.</p>
 <pre class="literal-block">
-.. csv-table:: :url: file:///etc/passwd
+<span>.. csv-table:: :url: file:///etc/passwd</span>
 </pre>
 </div>
 <div class="figure">
